--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@vercel/speed-insights": "^1.1.0",
     "cra-template": "1.2.0",
     "mathjs": "^14.0.1",
     "react": "^19.0.0",
